# AbbonamentiScalea

./: .gitignore  AGENTS.md  AbbonamentiScalea.spec  BOT_REFACTOR_IMPLEMENTATION.md  CHANGELOG.md  CODE_CHANGES_REFERENCE.md  EXCEL_IMPORT_CHANGES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  build_installer.py  chiavi_recupero_abbonamenti_protette.enc  create_installer.bat  installer.iss  pyproject.toml  seed_database.py
.github/workflows/: build.yml
abbonamenti/: main.py
abbonamenti/bot/: __init__.py  auth.py  config.py  handlers.py  logger.py  main.py  queries.py  rate_limiter.py  runner.py
abbonamenti/database/: manager.py  schema.py
abbonamenti/gui/: main_window.py  models.py  styles.py
abbonamenti/gui/dialogs/: add_edit_dialog.py  audit_viewer.py  backup_dialog.py  bot_settings_dialog.py  import_dialog.py  key_export_dialog.py  key_import_dialog.py  payment_report_dialog.py  restore_dialog.py  statistics_viewer.py
abbonamenti/security/: crypto.py  hmac.py  keys.py
abbonamenti/utils/: autostart.py  excel_parser.py  generate_test_excel.py  paths.py  payment_report.py  recovery_sheet.py
abbonamenti/validators/: __init__.py
assets/: import_example.xlsx
