[project]
name = "abbonamenti"
version = "0.3.0"
description = "Secure subscription archiving system for municipal police office"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.0",
    "pyinstaller>=6.18.0",
    "python-telegram-bot[all]>=21.0",
    "pyqt6>=6.10.2",
    "reportlab>=4.0.0",
]

[project.scripts]
abbonamenti = "abbonamenti.main:main"
abbonamenti-bot = "abbonamenti.bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
